--- a/css/appdark.css
+++ b/css/appdark.css
@@ -1,199 +1,330 @@
 body {
-    font-family: Calibri, Arial, sans-serif;
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
-    background-color: #101010;
+  font-family: Calibri, Arial, sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  background-color: #101010;
 }
+/* *-------- --------------------------------------------------------------*/
 /* *--------                 STACK Panes            ----------------*/
+/* *-------- --------------------------------------------------------------*/
 .stack-pane {
-    background-color: #232428;
-    border-style: solid;
-    border-width: 0px 1px 1px 1px;
-    border-color: #999fa8;
-    color: #a0a0a0;
+  background-color: #00000040;
+  border-style: solid;
+  border-width: 0px 1px 1px 1px;
+  border-color: #999fa8;
+  color: #a0a0a0;
 }
+
 .stack-pane-title {
-    color: #a0a0a0;
-    font-size: 11px;
-    font-weight: bold;
-    height: 28px;
+  color: #a0a0a0;
+  font-size: 11px;
+  font-weight: bold;
+  height: 28px;
 }
 .stack-pane-chgbutton {
-    color: lightgrey;
-    border: none;
-    background-color: #232428;
+  color: lightgrey;
+  border: none;
+  background-color: #232428;
 }
 .stack-pane-chgbutton:hover {
-    transition: 0.1s;
-    transform: scale(1.5);
+  transition: 0.1s;
+  transform: scale(1.5);
 }
+
+/* *-------- --------------------------------------------------------------*/
+/* *--------                 Windows/Containers           ----------------*/
+/* *-------- --------------------------------------------------------------*/
+.wn-draggable-main {
+  background-color: #232428a0;
+  border-radius: 4px;
+  border-style: solid;
+  border: 2px 1px 1px 1px;
+  border-color: #303030;
+
+  -webkit-box-shadow: 3px 4px 3px 0px #000000;
+  box-shadow: 3px 4px 3px 0px #000000;
+}
+.wn-titlebar {
+  background-color: #ffffff20;
+  font-size: 16px;
+  text-align: center;
+  color: #a0a0a0;
+}
+.overlay-window {
+  background-color: #00000040;
+  border-style: solid;
+  border-width: 0px 0px 1px 0px;
+  border-color: #202020;
+}
+/* *-------- --------------------------------------------------------------*/
+/* *--------                 BUTTONS             ----------------*/
+/* *-------- --------------------------------------------------------------*/
 /*  IMAGE BUTTON */
 .imagebutton {
-    background-color: #00000000;
-    background-repeat: no-repeat;
-    background-size: contain;
-    border-width: 0px;
-    outline: none;
-    transition: scale 1s;
+  background-color: #00000000;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border-width: 0px;
+  outline: none;
+  transition: scale 1s;
 }
 .imagebutton:hover {
-    transition: 0.3s;
-    transform: scale(1.2);
+  transition: 0.3s;
+  transform: scale(1.2);
 }
 .imagebutton:active {
-    transform: translateY(3px);
+  transform: translateY(3px);
 }
+.imagebutton2 {
+  background-color: #ffffff00;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border-width: 0px;
+  outline: none;
+  border-radius: 10px;
+}
+.imagebutton2:hover {
+  transition: 0.3s;
+  transform: scale(1.5);
+}
+.imagebutton2:active {
+  transition: 0.1s;
+  transform: translateY(3px);
+}
+.imagebutton3 {
+  background-color: #00000015;
+  background-repeat: no-repeat;
+  background-size: 28px, 28px;
+  border-width: 0px;
+  outline: none;
+  background-position-x: 3px;
+  background-position-y: -3px;
+}
+.imagebutton3:hover {
+  background-color: #00000030;
+}
+.imagebutton3:active {
+  transform: translateY(3px);
+}
+
 /*  STANDARD 1 */
 .basicbutton1 {
-    background-color: black;
-    border-radius: 6px;
-    color: white;
-    font-size: 16px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: grey;
-    font-weight: bold;
+  background-color: black;
+  border-radius: 6px;
+  color: white;
+  font-size: 16px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: grey;
+  font-weight: bold;
 }
 .basicbutton1:hover {
-    transition: 0.1s;
-    font-size: 115%;
+  transition: 0.1s;
+  font-size: 115%;
 }
 .basicbutton1:active {
-    transform: translateY(2px);
+  transform: translateY(2px);
 }
 /*  STANDARD 1 */
 .min-button {
-    background-color: black;
-    font-size: 14px;
-    border: none;
-    font-weight: bold;
-    color: grey;
+  background-color: #00000000;
+  font-size: 12px;
+  border: none;
+  font-weight: bold;
+  color: #b0b0b0;
+  text-align: left;
 }
 .min-button:hover {
-    transition: 0.3s;
-    transform: scale(1.5);
+  transform: translateX(2px);
 }
 .min-button:active {
-    transform: translateY(2px);
+  transform: translateY(2px);
 }
-
+.min-selected {
+  border-left: solid;
+  border-width: 4px;
+  padding-left: 4px;
+}
+/*  CUSTOM TOGGLE */
+.toggle-container {
+  border: solid;
+  border-width: 2px;
+  background-color: #d0d0d0;
+  border-color: #808080;
+  border-radius: 8px;
+  padding: 0px;
+}
+.toggle-container:hover {
+  border-width: 4px;
+}
+.toggle-inner-off {
+  border: none;
+  background-color: #404040;
+  border-radius: 12px;
+}
+.toggle-inner-on {
+  border: none;
+  background-color: #007a08;
+  border-radius: 12px;
+}
+/* *-------- --------------------------------------------------------------*/
 /* *--------                 DRAGGING             ----------------*/
+/* *-------- --------------------------------------------------------------*/
 .over {
-    border-color: white;
-    border-width: 2px;
-    border-style: dotted;
+  border-color: white;
+  border-width: 2px;
+  border-style: dotted;
 }
 .draggable:hover {
-    border-color: yellow;
-    border-width: 2px;
-    border-style: dotted;
+  border-color: yellow;
+  border-width: 2px;
+  border-style: dotted;
 }
+/* *-------- --------------------------------------------------------------*/
 /* *--------                 SVG            ----------------*/
+/* *-------- --------------------------------------------------------------*/
 .svgDisplayObject {
-    stroke: #ffff00;
-    stroke-width: 2px;
-    fill: #00000000;
-    opacity: 0;
+  stroke: #ffff00;
+  stroke-width: 2px;
+  fill: #00000000;
+  opacity: 0;
 }
 .svgDisplayObject:hover {
-    opacity: 1;
+  opacity: 1;
 }
 .svgDisplayObject:active {
-    fill: #ffffff80;
+  fill: #ffffff80;
 }
 .highlight {
-    stroke: #ffff00;
-    stroke-dasharray: 5, 5;
-    stroke-width: 2px;
-    fill: #00000000;
+  stroke: #ffff00;
+  stroke-dasharray: 5, 5;
+  stroke-width: 2px;
+  fill: #00000000;
 }
 .dragHandle {
-    stroke: yellow;
-    fill: #00000060;
-    stroke-width: 1px;
+  stroke: yellow;
+  fill: #00000060;
+  stroke-width: 1px;
 }
 .dragHandle:hover {
-    fill: #ffffff60;
-    cursor: crosshair;
+  fill: #ffffff60;
+  cursor: crosshair;
 }
 .dragHandle:active {
-    cursor: crosshair;
+  cursor: crosshair;
 }
+/* *-------- --------------------------------------------------------------*/
 /* *--------                OTHER           ----------------*/
+/* *-------- --------------------------------------------------------------*/
 .inputcolor {
-    background-color: transparent;
-    padding: 0px;
-    margin: 0px;
-    border-radius: 6px;
-    border: solid;
-    border-color: #808080;
+  background-color: transparent;
+  padding: 0px;
+  margin: 0px;
+  border-radius: 6px;
+  border: solid;
+  border-color: #808080;
 }
 .dropdown {
-    border: none;
-    color: grey;
-    background-color: #232428;
+  border: none;
+  color: grey;
+  background-color: #232428;
 }
+.nm-input {
+  background-color: #232428;
+  color: #a0a0a0;
+  font-size: 14px;
+  border: 1px;
+  border: solid;
+  border-color: #b0b0b0;
+  text-align: center;
+}
+/* *-------- --------------------------------------------------------------*/
 /* *--------                Labels/text             ----------------*/
+/* *-------- --------------------------------------------------------------*/
 .obj-label {
-    font-size: 13px;
-    color: white;
+  font-size: 13px;
+  color: white;
+}
+.boldit {
+  font-weight: bold;
+}
+.underlineit {
+  text-decoration: underline;
 }
 .spn-label {
-    background-color: black;
-    font-size: 16px;
-    font-weight: bold;
-    color: white;
-    border: 1px 0px 1px 0px;
+  background-color: black;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border: 1px 0px 1px 0px;
 }
+.info-caption {
+  font-size: 20px;
+  font-weight: bold;
+  color: #b0b0b0;
+}
+@keyframes shine {
+  0% {
+    color: #202020;
+  }
+  50% {
+    color: #d0d0d0;
+  }
+  100% {
+    color: #202020;
+  }
+}
+/* *-------- --------------------------------------------------------------*/
 /* *--------                 CUSTOM SLIDER            ----------------*/
+/* *-------- --------------------------------------------------------------*/
 /* The slider itself */
 .slider {
-    -webkit-appearance: none; /* Override default CSS styles */
-    appearance: none;
-    width: 100%; /* Full-width */
-    height: 18px; /* Specified height */
-    background: #838383; /* Grey background */
-    outline: none; /* Remove outline */
-    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-    -webkit-transition: 0.2s; /* 0.2 seconds transition on hover */
-    transition: opacity 0.2s;
+  -webkit-appearance: none; /* Override default CSS styles */
+  appearance: none;
+  width: 100%; /* Full-width */
+  height: 18px; /* Specified height */
+  background: #838383; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: 0.2s; /* 0.2 seconds transition on hover */
+  transition: opacity 0.2s;
 }
 /* Mouse-over effects */
 .slider:hover {
-    opacity: 1; /* Fully shown on mouse-over */
+  opacity: 1; /* Fully shown on mouse-over */
 }
 /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
 .slider::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Override default look */
-    appearance: none;
-    width: 8px; /* Set a specific slider handle width */
-    height: 18px; /* Slider handle height */
-    border-radius: 6px;
-    background: #ffffff; /* Green background */
-    cursor: pointer; /* Cursor on hover */
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 8px; /* Set a specific slider handle width */
+  height: 18px; /* Slider handle height */
+  border-radius: 6px;
+  background: #ffffff; /* Green background */
+  cursor: pointer; /* Cursor on hover */
 }
 .slider::-moz-range-thumb {
-    width: 8px; /* Set a specific slider handle width */
-    height: 18px; /* Slider handle height */
-    background: #ffffff; /* Green background */
-    cursor: pointer; /* Cursor on hover */
+  width: 8px; /* Set a specific slider handle width */
+  height: 18px; /* Slider handle height */
+  background: #ffffff; /* Green background */
+  cursor: pointer; /* Cursor on hover */
 }
+/* *-------- --------------------------------------------------------------*/
 /* *--------                 CUSTOM CHECKBOX            ----------------*/
+/* *-------- --------------------------------------------------------------*/
 .customcheck {
-    background-color: #00000000;
-    border: solid;
-    border-color: #808080;
-    border-width: 1px;
-    border-radius: 2px;
-    margin: 0px;
-    padding: 0px;
+  background-color: #00000000;
+  border: solid;
+  border-color: #808080;
+  border-width: 1px;
+  border-radius: 2px;
+  margin: 0px;
+  padding: 0px;
 }
 .customcheck:hover {
-    border-width: 2px;
+  border-width: 2px;
 }
 .customcheck:active {
-    transform: translateY(2px);
-}
-.innercheck {
+  transform: translateY(2px);
 }
