--- a/css/appdark.css
+++ b/css/appdark.css
@@ -64,6 +64,13 @@ body {
     border-width: 0px 1px 1px 1px;
     border-radius: 0px 0px 10px 10px;
 }
+.bottom-dialog {
+    background-color: #00000040;
+    border-style: solid;
+    border-color: #00000080;
+    border-width: 1px 1px 0px 1px;
+    border-radius: 10px 10px 0px 0px;
+}
 /* *-------- --------------------------------------------------------------*/
 /* *--------                 BUTTONS             ----------------*/
 /* *-------- --------------------------------------------------------------*/
@@ -75,10 +82,13 @@ body {
     border-width: 0px;
     outline: none;
     transition: scale 1s;
+    font-size: 12px;
+    font-weight: bold;
+    color: white;
 }
 .imagebutton:hover {
     transition: 0.3s;
-    transform: scale(1.2);
+    transform: scale(1.3);
 }
 .imagebutton:active {
     transform: translateY(3px);
@@ -114,7 +124,24 @@ body {
 .imagebutton3:active {
     transform: translateY(3px);
 }
-
+.panbutton {
+    background-color: #00000000;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position-x: 30%;
+    border-width: 1px;
+    border-color: #ffffff50;
+    border-radius: 2px;
+    outline: none;
+    transition: scale 1s;
+}
+.panbutton:hover {
+    transition: 0.3s;
+    transform: scale(1.2);
+}
+.panbutton:active {
+    transform: translateY(3px);
+}
 /*  STANDARD 1 */
 .basicbutton1 {
     background-color: #232428;
@@ -128,7 +155,7 @@ body {
 }
 .basicbutton1:hover {
     transition: 0.1s;
-    font-size: 115%;
+    font-size: 14px;
 }
 .basicbutton1:active {
     transform: translateY(2px);
@@ -203,6 +230,14 @@ body {
 .svgDisplayObject:active {
     fill: #ffffff80;
 }
+.svg-datatag {
+    stroke: #00000000;
+    fill: #00000020;
+    opacity: 0;
+}
+.svg-datatag:hover {
+    opacity: 1;
+}
 .svgLine {
     stroke: #ffff00;
     stroke-width: 4px;
@@ -255,8 +290,8 @@ body {
     text-align: center;
 }
 .text-input {
-    background-color: #e0e0e0;
-    color: #303030;
+    background-color: #232428;
+    color: #a0a0a0;
     font-size: 14px;
     border: 1px;
     border: solid;
@@ -313,6 +348,13 @@ body {
     100% {
         color: #202020;
     }
+}
+.card {
+    background-color: black;
+    border: solid;
+    border-radius: 8px;
+    border-color: white;
+    color: white;
 }
 /* *-------- --------------------------------------------------------------*/
 /* *--------                 CUSTOM SLIDER            ----------------*/
