--- a/css/applight.css
+++ b/css/applight.css
@@ -32,7 +32,7 @@ body {
 /* *--------                 Windows/Containers           ----------------*/
 /* *-------- --------------------------------------------------------------*/
 .wn-draggable-main {
-    background-color: #f0f0f0a0;
+    background-color: #f0f0f0d0;
     border-radius: 4px;
     border-style: solid;
     border: 2px 1px 1px 1px;
@@ -42,7 +42,7 @@ body {
     box-shadow: 3px 4px 3px 0px #000000;
 }
 .wn-titlebar {
-    background-color: #00000010;
+    background-color: #00000020;
     font-size: 16px;
     text-align: center;
     color: #707070;
@@ -60,6 +60,13 @@ body {
     border-width: 0px 1px 1px 1px;
     border-radius: 0px 0px 10px 10px;
 }
+.bottom-dialog {
+    background-color: #ffffff20;
+    border-style: solid;
+    border-color: #a0a0a0;
+    border-width: 1px 1px 0px 1px;
+    border-radius: 10px 10px 0px 0px;
+}
 /* *-------- --------------------------------------------------------------*/
 /* *--------                          BUTTONS             ----------------*/
 /* *-------- --------------------------------------------------------------*/
@@ -71,10 +78,13 @@ body {
     border-width: 0px;
     outline: none;
     transition: scale 1s;
+    font-size: 14px;
+    font-weight: bold;
+    color: black;
 }
 .imagebutton:hover {
-    transition: 0.3s;
-    transform: scale(1.2);
+    transition: 0.1s;
+    transform: scale(1.5);
 }
 .imagebutton:active {
     transform: translateY(3px);
@@ -112,6 +122,24 @@ body {
 .imagebutton3:active {
     transform: translateY(3px);
 }
+.panbutton {
+    background-color: #00000000;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position-x: 30%;
+    border-width: 1px;
+    border-color: #00000050;
+    border-radius: 2px;
+    outline: none;
+    transition: scale 1s;
+}
+.panbutton:hover {
+    transition: 0.3s;
+    transform: scale(1.2);
+}
+.panbutton:active {
+    transform: translateY(3px);
+}
 /*  STANDARD 1 */
 .basicbutton1 {
     background-color: #f0f0f0;
@@ -125,7 +153,7 @@ body {
 }
 .basicbutton1:hover {
     transition: 0.1s;
-    font-size: 115%;
+    font-size: 14px;
 }
 .basicbutton1:active {
     transform: translateY(2px);
@@ -220,6 +248,14 @@ body {
 .svgIgnore {
     opacity: 0;
 }
+.svg-datatag {
+    stroke: #00000000;
+    fill: #00000020;
+    opacity: 0;
+}
+.svg-datatag:hover {
+    opacity: 1;
+}
 .highlight {
     stroke: #ffff00;
     stroke-width: 2px;
@@ -297,6 +333,17 @@ body {
     100% {
         color: #606060;
     }
+}
+.card {
+    background-color: #ffffff20;
+    border: solid;
+    border-radius: 8px;
+    border-color: grey;
+    color: black;
+}
+.card-label {
+    color: black;
+    font-size: 20px;
 }
 /* *-------- --------------------------------------------------------------*/
 /* *--------                OTHER           ----------------*/
